fix firefox overflow scroll bug

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -10,6 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  min-height: 0;
   flex: 1;
 }
 
